Fix visibility for the checkbox Mark all as complete
github: #4

--- a/src/main/java/com/github/swingtodo/SwingTodoApp.form
+++ b/src/main/java/com/github/swingtodo/SwingTodoApp.form
@@ -238,6 +238,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBox1ActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="jCheckBox1.setVisible(false);"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JCheckBox" name="jCheckBox2">
           <Properties>
